--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "lint": "gts lint",
+    "clean": "gts clean",
+    "compile": "tsc",
+    "fix": "gts fix",
+    "start": "node build/src/index.js",
+    "prepare": "npm run compile",
+    "pretest": "npm run compile",
+    "posttest": "npm run lint",
     "gcloud:build": "gcloud builds submit --tag asia-northeast3-docker.pkg.dev/yddubugi-blog/cloud-run-source-deploy/yddubugi-blog",
     "gcloud:deploy": "gcloud run deploy --image asia-northeast3-docker.pkg.dev/yddubugi-blog/cloud-run-source-deploy/yddubugi-blog"
   },
@@ -16,5 +23,11 @@
   "license": "Apache-2.0",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.0.0",
+    "gts": "^4.0.0",
+    "typescript": "^4.7.0"
   }
 }
