--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "description": "Simple hello world sample in Node",
   "version": "1.0.0",
   "private": true,
-  "main": "index.js",
+  "main": "build/src/index.js",
   "scripts": {
     "lint": "gts lint",
     "clean": "gts clean",
+    "start": "node build/src/index.js",
+    "build": "tsc",
+    "dev": "nodemon src/index.ts",
     "compile": "tsc",
     "fix": "gts fix",
-    "start": "node build/src/index.js",
     "pretest": "npm run compile",
     "posttest": "npm run lint",
     "gcloud:build": "gcloud builds submit --tag asia-northeast3-docker.pkg.dev/yddubugi-blog/cloud-run-source-deploy/yddubugi-blog",
@@ -29,6 +31,8 @@
     "@types/express": "^4.17.13",
     "@types/node": "^16.0.0",
     "gts": "^4.0.0",
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.8.2",
     "typescript": "^4.7.0"
   }
 }
