--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
   "license": "Apache-2.0",
   "dependencies": {
     "body-parser": "^1.20.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^16.0.0",
     "gts": "^4.0.0",
     "nodemon": "^2.0.19",
